--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./index.css"/>
     <title>Food Order App</title>
 </head>
 <body>
@@ -10,6 +11,6 @@
     
   </div>
 
-  <script type="module" src="./App.js"></script>
+  <script type="module" src="./src/App.js"></script>
 </body>
 </html>
